openshift/AWX/statefulset.awx-web.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "awx-web"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "awx-web"
  serviceName: "awx-web"
  template:
    metadata:
      name: "awx-web"
      labels:
        app: "awx-web"
    spec:
      containers:
        - name: awx-web
          image: "ansible/awx_web:4.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8052
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: awx-application-config
              mountPath: /etc/tower/settings.py
              readOnly: true
              subPath: settings.py
            - name: awx-application-credentials
              mountPath: /etc/tower/conf.d/
              readOnly: true
            - name: awx-secret-key
              mountPath: /etc/tower/SECRET_KEY
              readOnly: true
              subPath: SECRET_KEY


      volumes:
        - name: awx-application-config
          configMap:
            name: "awx-config"
            items:
              - key: awx_settings
                path: settings.py
        - name: awx-secret-key
          secret:
            secretName: "awx-secrets"
            defaultMode: 420
            items:
              - key: secret_key
                path: SECRET_KEY
        - name: awx-environment
          secret:
            secretName: "awx-secrets"
            items:
              - key: environment_sh
                path: environment.sh
        - name: awx-application-credentials
          secret:
            secretName: "awx-secrets"
            items:
              - key: credentials_py
                path: 'credentials.py'
              - key: environment_sh
                path: 'environment.sh'

---
apiVersion: v1
kind: Service
metadata:
  name: "awx-web"
spec:
  selector:
    app: "awx-web"
  ports:
    - name: http
      port: 80
      targetPort: 8052

---
apiVersion: v1
kind: Route
metadata:
  name: "awx-web"
spec:
  to:
    kind: Service
    name: "awx-web"
  tls:
    termination: Edge
